--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,28 +3,28 @@ services:
     build:
       context: ./backend
     environment:
-      APP_PORT: "8080"
-      APP_WORKDIR: /app/build-workdir
-      APP_CONCURRENT_BUILDS: "1"
-      APP_RETENTION_HOURS: "168"
-      APP_BUILD_TIMEOUT_MINUTES: "90"
-      APP_BUILDER_IMAGE: meshtastic-pio-builder:latest
-      APP_PLATFORMIO_JOBS: "1"
-      APP_ALLOWED_ORIGINS: http://localhost:5173,http://localhost:5174,http://localhost:3000
-      APP_MAX_LOG_LINES: "20000"
-      APP_BUILD_RATE_LIMIT_PER_MINUTE: "10"
+      APP_PORT: "${APP_PORT}"
+      APP_WORKDIR: "${APP_WORKDIR}"
+      APP_CONCURRENT_BUILDS: "${APP_CONCURRENT_BUILDS}"
+      APP_RETENTION_HOURS: "${APP_RETENTION_HOURS}"
+      APP_BUILD_TIMEOUT_MINUTES: "${APP_BUILD_TIMEOUT_MINUTES}"
+      APP_BUILDER_IMAGE: "${APP_BUILDER_IMAGE}"
+      APP_PLATFORMIO_JOBS: "${APP_PLATFORMIO_JOBS}"
+      APP_ALLOWED_ORIGINS: "${APP_ALLOWED_ORIGINS}"
+      APP_MAX_LOG_LINES: "${APP_MAX_LOG_LINES}"
+      APP_BUILD_RATE_LIMIT_PER_MINUTE: "${APP_BUILD_RATE_LIMIT_PER_MINUTE}"
     volumes:
       - ./build-workdir:/app/build-workdir
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
-      - "8080:8080"
+      - "8081:8080"
 
   frontend:
     build:
       context: ./frontend
       args:
-        VITE_API_BASE_URL: ""
+        VITE_API_BASE_URL: "${VITE_API_BASE_URL}"
     depends_on:
       - backend
     ports:
-      - "5173:80"
+      - "5174:80"
