feat: enhance Docker support by adding configurable host workdir and cache directory

--- a/env.sample
+++ b/env.sample
@@ -9,6 +9,10 @@ APP_PLATFORMIO_JOBS=1
 APP_ALLOWED_ORIGINS=http://localhost:5173
 APP_MAX_LOG_LINES=20000
 APP_BUILD_RATE_LIMIT_PER_MINUTE=10
+# Optional for Dockerized backend + docker.sock setup.
+# If unset, docker-compose uses ${PWD}/build-workdir defaults.
+APP_DOCKER_HOST_WORKDIR=/absolute/path/to/meshtastic-firmware-builder/build-workdir
+APP_DOCKER_HOST_CACHE_DIR=/absolute/path/to/meshtastic-firmware-builder/build-workdir/platformio-cache
 
 # Frontend (Vite)
 VITE_API_BASE_URL=http://localhost:8080
