feat: implement captcha management and server health check in API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       APP_ALLOWED_ORIGINS: "${APP_ALLOWED_ORIGINS}"
       APP_MAX_LOG_LINES: "${APP_MAX_LOG_LINES}"
       APP_BUILD_RATE_LIMIT_PER_MINUTE: "${APP_BUILD_RATE_LIMIT_PER_MINUTE}"
+      APP_REQUIRE_CAPTCHA: "${APP_REQUIRE_CAPTCHA:-1}"
       APP_DOCKER_HOST_WORKDIR: "${APP_DOCKER_HOST_WORKDIR:-${PWD}/build-workdir}"
       APP_DOCKER_HOST_CACHE_DIR: "${APP_DOCKER_HOST_CACHE_DIR:-${PWD}/build-workdir/platformio-cache}"
     volumes:
