--- a/env.sample
+++ b/env.sample
@@ -11,6 +11,8 @@ APP_PLATFORMIO_CACHE_DIR=./build-workdir/platformio-cache
 APP_ALLOWED_ORIGINS=http://localhost:5173
 APP_MAX_LOG_LINES=20000
 APP_BUILD_RATE_LIMIT_PER_MINUTE=10
+# Set to 0/false for trusted self-hosted setups
+APP_REQUIRE_CAPTCHA=1
 # Optional for Dockerized backend + docker.sock setup.
 # If unset, docker-compose uses ${PWD}/build-workdir defaults.
 APP_DOCKER_HOST_WORKDIR=/absolute/path/to/meshtastic-firmware-builder/build-workdir
