feat: add support for multiple backend URLs with round-robin and failover handling

--- a/env.sample
+++ b/env.sample
@@ -19,4 +19,8 @@ APP_DOCKER_HOST_WORKDIR=/absolute/path/to/meshtastic-firmware-builder/build-work
 APP_DOCKER_HOST_CACHE_DIR=/absolute/path/to/meshtastic-firmware-builder/build-workdir/platformio-cache
 
 # Frontend (Vite)
+# Primary backend URL (fallback when VITE_API_BASE_URLS is empty)
 VITE_API_BASE_URL=http://localhost:8080
+# Optional backend pool for round-robin + failover (comma/space/newline separated)
+# Example: VITE_API_BASE_URLS=http://localhost:8080,http://localhost:8081
+VITE_API_BASE_URLS=
