--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       context: ./frontend
       args:
         VITE_API_BASE_URL: "${VITE_API_BASE_URL}"
+        VITE_API_BASE_URLS: "${VITE_API_BASE_URLS:-}"
     depends_on:
       - backend
     ports:
