--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,7 +8,9 @@ RUN npm install
 COPY . .
 
 ARG VITE_API_BASE_URL=http://localhost:8080
+ARG VITE_API_BASE_URLS=
 ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+ENV VITE_API_BASE_URLS=$VITE_API_BASE_URLS
 
 RUN npm run build
 
