feat(docs): update README with new environment variables - add APP_NODE_BASE_URL for backend node configuration - add APP_PROXY_BACKEND_URLS for allowed backend peers - add APP_PROXY_TIMEOUT_SECONDS for backend proxy timeout - explain frontend behavior when VITE_API_BASE_URLS is configured
feat(config): enhance configuration for proxy capabilities
- add NodeBaseURL, ProxyBackendURLs, and ProxyTimeout to Config struct
- implement loading of new environment variables in Load function

feat(httpapi): implement proxy request handling in server
- add logic to handle backend proxy requests
- support for proxying to allowed backend peers
- use new headers to manage proxied requests

feat(api): enhance API interaction with backend routing
- implement routedApiUrl function for managing backend routes
- update backend route information handling in requests

feat(frontend): update frontend to support backend routing
- manage gateway and job backend base URLs
- display backend routing information in UI
- update API calls to handle new backend routing logic

style(frontend): improve UI for backend status display
- add styles for backend chip and routing notes
- enhance layout of status chips in UI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       APP_REQUIRE_CAPTCHA: "${APP_REQUIRE_CAPTCHA:-1}"
       APP_DOCKER_HOST_WORKDIR: "${APP_DOCKER_HOST_WORKDIR:-${PWD}/build-workdir}"
       APP_DOCKER_HOST_CACHE_DIR: "${APP_DOCKER_HOST_CACHE_DIR:-${PWD}/build-workdir/platformio-cache}"
+      APP_NODE_BASE_URL: "${APP_NODE_BASE_URL:-}"
+      APP_PROXY_BACKEND_URLS: "${APP_PROXY_BACKEND_URLS:-}"
+      APP_PROXY_TIMEOUT_SECONDS: "${APP_PROXY_TIMEOUT_SECONDS:-10}"
     volumes:
       - ${APP_DOCKER_HOST_WORKDIR:-${PWD}/build-workdir}:/app/build-workdir
       - /var/run/docker.sock:/var/run/docker.sock
