--- a/env.sample
+++ b/env.sample
@@ -13,6 +13,13 @@ APP_MAX_LOG_LINES=20000
 APP_BUILD_RATE_LIMIT_PER_MINUTE=10
 # Set to 0/false for trusted self-hosted setups
 APP_REQUIRE_CAPTCHA=1
+# Optional: explicit base URL of this backend node
+APP_NODE_BASE_URL=http://localhost:8080
+# Optional: allowed peer backends for proxying cluster requests
+# Example: APP_PROXY_BACKEND_URLS=http://backend-1:8080,http://backend-2:8080
+APP_PROXY_BACKEND_URLS=
+# Timeout for backend-to-backend proxy requests
+APP_PROXY_TIMEOUT_SECONDS=10
 # Optional for Dockerized backend + docker.sock setup.
 # If unset, docker-compose uses ${PWD}/build-workdir defaults.
 APP_DOCKER_HOST_WORKDIR=/absolute/path/to/meshtastic-firmware-builder/build-workdir
