--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,9 @@ services:
       APP_DOCKER_HOST_WORKDIR: "${APP_DOCKER_HOST_WORKDIR:-${PWD}/build-workdir}"
       APP_DOCKER_HOST_CACHE_DIR: "${APP_DOCKER_HOST_CACHE_DIR:-${PWD}/build-workdir/platformio-cache}"
       DOCKER_HOST: "tcp://docker-socket-proxy:2375"
+      APP_NODE_BASE_URL: "${APP_NODE_BASE_URL:-}"
+      APP_PROXY_BACKEND_URLS: "${APP_PROXY_BACKEND_URLS:-}"
+      APP_PROXY_TIMEOUT_SECONDS: "${APP_PROXY_TIMEOUT_SECONDS:-10}"
     volumes:
       - ${APP_DOCKER_HOST_WORKDIR:-${PWD}/build-workdir}:/app/build-workdir
     networks:
