feat: implement firmware caching mechanism and update related configurations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       APP_BUILD_TIMEOUT_MINUTES: "${APP_BUILD_TIMEOUT_MINUTES}"
       APP_BUILDER_IMAGE: "${APP_BUILDER_IMAGE}"
       APP_PLATFORMIO_JOBS: "${APP_PLATFORMIO_JOBS}"
+      APP_FIRMWARE_CACHE_DIR: "${APP_FIRMWARE_CACHE_DIR:-/app/build-workdir/firmware-cache}"
       APP_ALLOWED_ORIGINS: "${APP_ALLOWED_ORIGINS}"
       APP_MAX_LOG_LINES: "${APP_MAX_LOG_LINES}"
       APP_BUILD_RATE_LIMIT_PER_MINUTE: "${APP_BUILD_RATE_LIMIT_PER_MINUTE}"
