--- a/env.sample
+++ b/env.sample
@@ -8,6 +8,8 @@ APP_BUILDER_IMAGE=meshtastic-pio-builder:latest
 APP_PLATFORMIO_JOBS=1
 # Optional local cache path (defaults to ./build-workdir/platformio-cache)
 APP_PLATFORMIO_CACHE_DIR=./build-workdir/platformio-cache
+# Optional firmware artifact cache path (defaults to ./build-workdir/firmware-cache)
+APP_FIRMWARE_CACHE_DIR=./build-workdir/firmware-cache
 APP_ALLOWED_ORIGINS=http://localhost:5173
 APP_MAX_LOG_LINES=20000
 APP_BUILD_RATE_LIMIT_PER_MINUTE=10
